--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -180,9 +180,8 @@
 <main class="main">
   <div class="content">
     <div class="left-side">
-
       <h1>{{ title }}</h1>
-      <p>Estamos en construccion  - pronto estaremos para ti</p>
+      <p>Estamos en construccion, estaremos pronto para ti. 🎉</p>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
   </div>
