--- a/src/app/components/nav/nav.component.css
+++ b/src/app/components/nav/nav.component.css
@@ -3,12 +3,10 @@ nav {
     display: flex;
     justify-content: center;
     position: fixed;
-    top: 0;
-    left: 0;
+    margin-top: 1rem;
     width: 100vw;
+    height: 4rem;
     z-index: 1000;
-    padding: 0 1rem;
-    background-color: var(--color-600);
 }
 
 /* CONTENEDOR GENERAL */
@@ -143,6 +141,10 @@ nav {
         height: auto;
     }
 
+    .menu-2 ul{
+        gap: 1.5rem;
+    }
+
     .menu {
         display: none; /* Ocultar el menú en móviles y mostrar al desplegar */
     }
@@ -160,9 +162,11 @@ nav {
 
 /* ESTILOS PARA MÓVILES */
 @media (max-width: 768px) {
+
     .menu-2{
         display: none;
     }
+
     .menu {
         display: none; /* Ocultar por defecto */
     }
