--- a/src/app/components/nav/nav.component.css
+++ b/src/app/components/nav/nav.component.css
@@ -7,6 +7,7 @@ nav {
     width: 100vw;
     height: 4rem;
     z-index: 1000;
+    transition: transform 0.3s ease, opacity 0.3s ease;
 }
 
 /* CONTENEDOR GENERAL */
@@ -19,6 +20,7 @@ nav {
     height: auto;
     padding: 1rem;
     border-radius: 1rem;
+    transition: background-color 0.3s ease-in-out;
 }
 
 /* LOGO */
@@ -84,12 +86,13 @@ nav {
     flex-direction: column;
     align-items: start;
     padding: 2rem;
-    transition: all 0.3s ease-in-out; /* Animación de entrada */
+    transition: all 0.3s ease-in-out;
     z-index: 1002; /* Por encima del overlay */
 }
 
 .menu.show {
     right: 0; /* Cuando se despliega */
+    opacity: 1;
 }
 
 /* OPCIONES EN MENÚ MÓVIL */
