--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -47,15 +47,37 @@
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
-    justify-content: center;
+    padding: 4rem;
+    justify-content: left;
     align-items: center;
   }
   
   .texto {
+    display: flex;
+    gap: 1rem;
+    flex-direction: column;
     color: white;
     font-size: 1.5rem;
-    text-align: center;
     padding: 1rem;
+  }
+
+  .texto h2{
+    font-size: 4rem;
+  }
+
+  .texto span{
+    margin-top: -1rem;
+    margin-bottom: 2rem;
+    font-size: 1.3rem;
+  }
+
+  .texto a{
+    text-decoration: none;
+    max-width: max-content;
+    padding: 0.5rem 2.5rem;
+    border-radius: 0.5rem;
+    background-color: var(--color-700);
+    color: var(--color-white);
   }
   
   .prev, .next {
@@ -77,3 +99,35 @@
     right: 10px;
   }
   
+
+  @media (max-width: 768px) {
+    .overlay {
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        padding: 0rem;
+        justify-content: left;
+        align-items: center;
+      }
+
+    .texto {
+        display: flex;
+        gap: 0.5rem;
+        flex-direction: column;
+        color: white;
+        font-size: 1.5rem;
+      }
+    
+      .texto h2{
+        font-size: 2.5rem;
+      }
+    
+      .texto span{
+        margin-top: -1rem;
+        margin-bottom: 1rem;
+        font-size: 1rem;
+      }
+    
+  }
