--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -75,8 +75,8 @@
     text-decoration: none;
     max-width: max-content;
     padding: 0.5rem 2.5rem;
+    border: solid 0.1rem var(--color-white);
     border-radius: 0.5rem;
-    background-color: var(--color-700);
     color: var(--color-white);
   }
   
@@ -130,4 +130,89 @@
         font-size: 1rem;
       }
     
+  }
+  
+  .container-service{
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    padding: 2rem 0rem;
+    background-color: var(--color-50);
+  }
+
+  .servicio{
+    display: flex;
+    width: 90rem;
+  }
+
+  .servicio .description{
+    width: 100%;
+    text-align: center;
+  }
+
+
+  .servicio .description h2{
+    font-size: 2rem;
+    font-weight: 600;
+    color: var(--color-950);
+  }
+
+  .servicio .description .veneficios{
+    padding: 1rem;
+    margin-top: 2rem;
+  }
+
+  .servicio .description .veneficios ul{
+    display: flex;
+    gap: 2rem;
+  }
+
+  .servicio .description .veneficios ul li{
+    list-style: none;
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+    padding: 2rem;
+    border-radius: 1rem;
+    background-color: var(--color-white);
+  }
+
+  .servicio .description .veneficios ul li .icono{
+    width: 5rem;
+    height: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    color: var(--color-900);
+    background-color: var(--color-50);
+    font-size: 2rem;
+    transition: transform 0.3s ease, color 0.3s ease, background-color 0.3s ease;
+  }
+
+  .servicio .description .veneficios ul li .icono:hover{
+    color: var(--color-red);
+    transform: scale(1.2) rotate(10deg);
+  }
+
+  .servicio .description .veneficios ul li .veneficio{
+    width: 70%;
+  }
+
+  .servicio .description .veneficios h3{
+    font-weight: 600;
+  }
+
+  .servicio .description .veneficios p{
+    font-size: 0.8rem;
+    font-weight: 200;
+  }
+
+  @media (max-width: 768px) {
+    .container-service{
+      margin-top: -20rem;  
+    }
+    .servicio .description .veneficios ul{
+      flex-direction: column;
+    }
   }
