--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,59 +1,64 @@
-<div class="home">
-  <div class="hero">
-    <div class="carrusel">
-      <div class="slides" [style.transform]="getTransform()">
-        <div *ngFor="let imagen of imagenes; let i = index" class="slide">
-          <img [src]="imagen.url" alt="Imagen {{ i + 1 }}">
-          <div class="overlay">
-            <div class="texto">
-              <h2>{{ imagen.tittle }}</h2>
-              <span>{{ imagen.mensaje }}</span>
-              <a href="">Lo quiero</a>
+<section id="home">
+  <div class="home">
+    <div class="hero">
+      <div class="carrusel">
+        <div class="slides" [style.transform]="getTransform()">
+          <div *ngFor="let imagen of imagenes; let i = index" class="slide">
+            <img [src]="imagen.url" alt="Imagen {{ i + 1 }}">
+            <div class="overlay">
+              <div class="texto">
+                <h2>{{ imagen.tittle }}</h2>
+                <span>{{ imagen.mensaje }}</span>
+                <a href="">Lo quiero</a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <button class="prev" (click)="anterior()">&#10094;</button>
-      <button class="next" (click)="siguiente()">&#10095;</button>
-    </div>
-  </div>
-</div>
-<div class="container-service">
-  <div class="servicio">
-    <div class="description">
-      <h2>Internet por Fibra Óptica</h2>
-      <p>Conéctate con la tecnología más avanzada y vive la mejor experiencia de navegación.</p>
-      <div class="veneficios">
-        <ul>
-          <li>
-            <div class="icono">
-              <i class="fa-solid fa-rocket"></i>
-            </div>
-            <div class="veneficio">
-              <h3>Alta Velocidad</h3>
-              <p>Descargas en segundos, streaming en HD y gaming sin interrupciones.</p>
-            </div>
-          </li>
-          <li>
-            <div class="icono">
-              <i class="fa-solid fa-gauge-simple-high"></i>
-            </div>
-            <div class="veneficio">
-              <h3>Total Estabilidad</h3>
-              <p>Navega sin cortes ni interrupciones, incluso en horas pico.</p>
-            </div>
-          </li>
-          <li>
-            <div class="icono">
-              <i class="fa-solid fa-headset"></i>
-            </div>
-            <div class="veneficio">
-              <h3>Soporte 24/7</h3>
-              <p>Estamos contigo siempre que nos necesites, las 24 horas del día.</p>
-            </div>
-          </li>
-        </ul>
+        <button class="prev" (click)="anterior()">&#10094;</button>
+        <button class="next" (click)="siguiente()">&#10095;</button>
       </div>
     </div>
   </div>
-</div>
+</section>
+<section  id="veneficios">
+  <div class="container-service">
+    <div class="servicio">
+      <div class="description">
+        <h2>Internet por Fibra Óptica</h2>
+        <p>Conéctate con la tecnología más avanzada y vive la mejor experiencia de navegación.</p>
+        <div class="veneficios">
+          <ul>
+            <li>
+              <div class="icono">
+                <i class="fa-solid fa-rocket"></i>
+              </div>
+              <div class="veneficio">
+                <h3>Alta Velocidad</h3>
+                <p>Descargas en segundos, streaming en HD y gaming sin interrupciones.</p>
+              </div>
+            </li>
+            <li>
+              <div class="icono">
+                <i class="fa-solid fa-gauge-simple-high"></i>
+              </div>
+              <div class="veneficio">
+                <h3>Total Estabilidad</h3>
+                <p>Navega sin cortes ni interrupciones, incluso en horas pico.</p>
+              </div>
+            </li>
+            <li>
+              <div class="icono">
+                <i class="fa-solid fa-headset"></i>
+              </div>
+              <div class="veneficio">
+                <h3>Soporte 24/7</h3>
+                <p>Estamos contigo siempre que nos necesites, las 24 horas del día.</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="separador-3"></div>
+      </div>
+    </div>
+  </div>
+</section>
