--- a/src/styles.css
+++ b/src/styles.css
@@ -36,3 +36,23 @@ html {
   'GRAD' 0,
   'opsz' 24
 }
+
+html::-webkit-scrollbar {
+  display: none;
+}
+
+.separador-3{
+  height: 3rem;
+}
+.separador-4{
+  height: 4rem;
+}
+.separador-5{
+  height: 5rem;
+}
+.separador-6{
+  height: 6rem;
+}
+.separador-7{
+  height: 7rem;
+}
