update manejo de planes

--- a/src/app/components/planes/planes.component.html
+++ b/src/app/components/planes/planes.component.html
@@ -13,6 +13,9 @@
                 </ng-template>
                 
                 <div class="plan">
+                    <div class="slogan">
+                        <span>{{imagen.veneficio.tipo}}</span>
+                    </div>
                     <div class="titulo">
                         <h2>{{imagen.plan}}</h2>
                     </div>
@@ -30,28 +33,28 @@
                 </div>
                 <div class="icons-servicio">
                     <div class="icon">
-                        <i class="fa-solid fa-wifi"></i>
-                        <span>router alta velocidad</span>
+                        <mat-icon>swap_vert</mat-icon>
+                        <span>Internet Simétrico</span>
                     </div>
                     <div class="icon">
-                        <i class="fa-solid fa-wifi"></i>
-                        <span>router alta velocidad</span>
+                        <mat-icon>settings_input_component</mat-icon>
+                        <span>100% Fibra óptica</span>
                     </div>
                     <div class="icon">
-                        <i class="fa-solid fa-wifi"></i>
-                        <span>router alta velocidad</span>
+                        <mat-icon>router</mat-icon>
+                        <span>Router de alta velocidad</span>
                     </div>
                     <div class="icon">
-                        <i class="fa-solid fa-wifi"></i>
-                        <span>router alta velocidad</span>
+                        <mat-icon>speed</mat-icon>
+                        <span>Velocidad garantizada</span>
                     </div>
                     <div class="icon">
-                        <i class="fa-solid fa-wifi"></i>
-                        <span>router alta velocidad</span>
+                        <mat-icon>network_check</mat-icon>
+                        <span>Incluye Wifi</span>
                     </div>
                     <div class="icon">
-                        <i class="fa-solid fa-wifi"></i>
-                        <span>router alta velocidad</span>
+                        <mat-icon>downloading</mat-icon>
+                        <span>Descarga Ilimitada</span>
                     </div>
                 </div>
               </div>
