--- a/src/app/components/planes/planes.component.css
+++ b/src/app/components/planes/planes.component.css
@@ -17,7 +17,7 @@ splide {
   
   .container-plan{
     width: 80%;
-    padding: 10rem 0rem;
+    padding: 8rem 0rem;
   }
 
   .container-plan .card-plan{
@@ -30,7 +30,10 @@ splide {
     height: 2rem;
     background-color: var(--color-red);
     text-align: center;
-    border-radius: 1rem 1rem 0rem 0rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0.8rem 0.8rem 0rem 0rem;
     color: var(--color-white);
   }
 
@@ -41,9 +44,11 @@ splide {
   }
 
   .card-plan .plan{
+    padding-top: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 2rem;
   }
 
   .card-plan .plan .imagen{
@@ -68,11 +73,17 @@ splide {
     margin-bottom: 1rem;
     width: max-content;
     padding: 0.5rem 1rem;
-    border-radius: 1rem;
+    border-radius: 0.5rem;
     text-align: center;
     background-color: var(--color-800);
     color: var(--color-white);
     text-decoration: none;
+  }
+
+  .card-plan .accion a:hover{
+    background: none;
+    border: 0.2rem solid var(--color-950);
+    color: var(--color-800);
   }
 
   .icons-servicio {
@@ -105,11 +116,21 @@ splide {
 }
 
 
-.icons-servicio .icon i{
+.icons-servicio .icon mat-icon{
     font-size: 2rem;
+    width: 100%;
+    height: 100%;
     color: var(--color-950);
 }
 
 .icons-servicio .icon span{
     font-size: 0.7rem;
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 100,
+  'GRAD' 0,
+  'opsz' 24
 }
