--- a/src/app/components/planes/planes.component.css
+++ b/src/app/components/planes/planes.component.css
@@ -20,13 +20,6 @@ splide {
     padding: 8rem 0rem;
   }
 
-  @media (max-width: 768px) {
-    .container-plan{
-        width: 90%;
-        padding: 8rem 0rem;
-      }    
-  }
-
   .container-plan .card-plan{
     margin-left: 1rem;
     margin-right: 1rem;
@@ -64,6 +57,17 @@ splide {
     flex-direction: column;
     align-items: center;
     gap: 2rem;
+  }
+
+  @media (max-width: 768px) {
+    .container-plan{
+        width: 90%;
+        padding: 8rem 0rem;
+      }
+      
+    .card-plan .plan{
+        gap: 0.5rem;
+    }
   }
 
   .card-plan .plan .imagen{
