udpate desing for web

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -12,17 +12,17 @@
             <button class="close-button" (click)="closeMenu()">&#10005;</button>
             <ul>
                 <li><a routerLink="/home" fragment="home" (click)="closeMenu()">Inicio</a></li>
-                <li><a routerLink="" (click)="closeMenu()">Beneficios</a></li>
                 <li><a routerLink="" (click)="closeMenu()">Planes</a></li>
+                <li><a routerLink="" (click)="closeMenu()">Beneficios</a></li>
                 <li><a routerLink="" (click)="closeMenu()">Cobertura</a></li>
             </ul>
         </div>
         <div class="menu-2">
             <ul>
-                <li><a routerLink="/home" fragment="home" (click)="closeMenu()">Inicio</a></li>
-                <li><a routerLink="" (click)="closeMenu()">Beneficios</a></li>
-                <li><a routerLink="" (click)="closeMenu()">Planes</a></li>
-                <li><a routerLink="" (click)="closeMenu()">Cobertura</a></li>
+                <li><a routerLink="/home" fragment="home">Inicio</a></li>
+                <li><a routerLink="">Planes</a></li>
+                <li><a routerLink="">Beneficios</a></li>
+                <li><a routerLink="">Cobertura</a></li>
             </ul>
         </div>
         <!-- Overlay que cubre toda la pantalla -->
