--- a/src/app/components/planes/planes.component.css
+++ b/src/app/components/planes/planes.component.css
@@ -16,15 +16,38 @@ splide {
   }
   
   .container-plan{
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    align-items: center;
     width: 80%;
-    padding: 8rem 0rem;
+    padding: 5rem 0rem;
+  }
+
+  .container-plan .planes-head{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+
+  .container-plan .planes-head h1{
+    font-weight: 500;
+    font-size: 3rem;
+    color: var(--color-800);
+  }
+
+  .container-plan .planes-head span{
+    color: var(--color-red);
   }
 
   .container-plan .card-plan{
-    margin-left: 1rem;
-    margin-right: 1rem;
+    margin: 1rem;
     border-radius: 1rem;
-    border: 0.2rem solid var(--color-950);
+    /* border: 0.2rem solid var(--color-950); */
+    -webkit-box-shadow: 0px 0px 5px 0.5px rgba(120, 120, 120, 0.281);
+    -moz-box-shadow: 0px 0px 5px 0.5px rgba(120, 120, 120, 0.281);
+    box-shadow: 0px 0px 5px 0.5px rgba(120, 120, 120, 0.281);
   }
 
   @media (max-width: 1024px) {
@@ -56,11 +79,12 @@ splide {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 2rem;
+    gap: 1rem;
   }
 
   @media (max-width: 768px) {
     .container-plan{
+      margin-top: -25rem;  
         width: 90%;
         padding: 8rem 0rem;
       }
@@ -68,6 +92,17 @@ splide {
     .card-plan .plan{
         gap: 0.5rem;
     }
+
+    .container-plan .planes-head h1{
+      font-weight: 500;
+      font-size: 2rem;
+      color: var(--color-800);
+    }
+  
+    .container-plan .planes-head span{
+      color: var(--color-red);
+    }
+  
   }
 
   .card-plan .plan .imagen{
@@ -81,6 +116,20 @@ splide {
     object-fit: cover;
     filter: drop-shadow(0rem 0rem 0.3rem var(--color-100));
   }
+
+  .card-plan .plan .titulo h2{
+    font-size: 2rem;
+    color: var(--color-950);
+  }
+
+  .card-plan .plan .precio span{
+    font-size: 1.5rem;
+    font-weight: 600;
+  }
+
+  .card-plan .plan .precio span .small-text {
+    font-size: 0.6em;
+}
 
   .card-plan .accion{
     display: flex;
