--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,5 @@
 <app-home></app-home>
 <app-planes></app-planes>
 <app-beneficios></app-beneficios>
+<app-covertura></app-covertura>
+<app-footer></app-footer>
