--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,34 @@
-<p>footer works!</p>
+<footer class="footer">
+    <div class="footer-container">
+      <div class="footer-flex">
+        <!-- Información de contacto -->
+        <div class="footer-contact">
+          <p class="footer-title">Solicítalo Ya!</p>
+          <p>Teléfono: <a href="tel:+51964875184" class="footer-link">964 875 184</a></p>
+          <p>WhatsApp: <a href="https://wa.me/51996395618" target="_blank" class="footer-link">996 395 618</a></p>
+        </div>
+  
+        <!-- Redes sociales -->
+        <div class="footer-social">
+          <p class="footer-title">Conéctate con nosotros:</p>
+          <div class="social-icons">
+            <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
+            <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+            <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+          </div>
+        </div>
+  
+        <!-- Logo de la compañía -->
+        <div class="footer-logo">
+          <p class="footer-title">Internet Ilimitado - Teslanet</p>
+          <!-- <img src="path/to/logo.png" alt="Teslanet" class="logo-img"> -->
+           <h2>TESLANET</h2>
+        </div>
+      </div>
+      <hr class="footer-divider">
+      <p class="footer-copyright">&copy; 2024 Teslanet - Todos los derechos reservados.</p>
+    </div>
+  </footer>
+  
+  <!-- Agregar iconos de redes sociales (se requiere Font Awesome) -->
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
