--- a/src/app/components/covertura/covertura.component.html
+++ b/src/app/components/covertura/covertura.component.html
@@ -1,4 +1,6 @@
 <div class="container-cobertura">
+  <h2 class="coverage-title">Cobertura de Internet Teslanet</h2>
+  <p class="coverage-description">Verifica si tenemos cobertura en tu área y disfruta del mejor internet de fibra óptica.</p>
   <div class="container-map">
     <div id="map"></div>
   </div>
