--- a/src/app/components/covertura/covertura.component.css
+++ b/src/app/components/covertura/covertura.component.css
@@ -1,4 +1,9 @@
 .container-cobertura{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 4rem;
 }
 
 .container-cobertura .container-map{
@@ -9,8 +14,34 @@
   justify-content: center;
 }
 
+.container-cobertura h2{
+  font-weight: 500;
+  font-size: 3rem;
+  color: var(--color-800);
+}
+
+.container-cobertura p{
+  color: var(--color-red);
+}
+
 #map {
   border: solid 2px var(--color-800);
+  border-radius: 1rem;
   height: 30rem;
   width: 85%;
+}
+
+@media (max-width: 768px) {
+  .container-cobertura h2{
+    font-weight: 500;
+    font-size: 2rem;
+    color: var(--color-800);
+    text-align: center;
+  }
+  
+  .container-cobertura p{
+    color: var(--color-red);
+    text-align: center;
+  }
+
 }
