update logos and mejroas en la web

--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,113 +1,81 @@
-.footer {
-    background-color: var(--color-800);
-    color: var(--color-50);
-    padding: 40px 0;
-    text-align: center;
-    font-family: 'Arial', sans-serif;
-  }
+.footer{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  background: var(--color-800);
+  color: var(--color-white);
+}
 
-  .footer-container {
-    max-width: 1200px;
-    margin: auto;
-    padding: 0 20px;
-  }
+.footer-container{
+  width: 90rem;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
 
-  .footer-flex {
+.footer-container .footer-flex{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin-bottom: 2rem;
+}
+
+.footer-container .footer-flex .footer-contact{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  text-align: left;
+}
+
+.footer-container .footer-flex .footer-contact a{
+  color: var(--color-white);
+  text-decoration: none;
+}
+
+.footer-container .footer-flex .footer-social{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3rem;
+}
+
+.footer-container .footer-flex .footer-social .social-icons{
+  display: flex;
+  gap: 3rem;
+}
+
+.footer-container .footer-flex .footer-social .social-icons a i{
+  color: var(--color-white);
+  font-size: 2rem;
+}
+
+.footer-container .footer-flex .footer-logo {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  align-items: flex-end;
+}
+
+.footer-container .footer-flex .footer-logo img{
+  width: 220px;
+}
+
+@media (max-width: 768px){
+  .footer-container .footer-flex{
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: flex-start;
-    gap: 30px;
+    gap: 2rem;
+    flex-direction: column;
   }
 
-  .footer-contact,
-  .footer-social,
-  .footer-logo {
-    flex: 1 1 calc(33.333% - 40px);
-    margin-bottom: 20px;
-    text-align: left;
+  .footer-container .footer-flex{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
   }
 
-  .footer-title {
-    font-size: 1.2em;
-    font-weight: 500;
-    color: var(--color-200);
-    margin-bottom: 10px;
+  .footer-container .footer-flex .footer-contact{
+    text-align: center;
   }
 
-  .footer-link {
-    color: var(--color-100);
-    text-decoration: none;
-    font-weight: 400;
-    transition: color 0.3s ease;
+  .footer-container .footer-flex .footer-logo{
+    align-items: center;
   }
-
-  .footer-link:hover {
-    color: var(--color-50);
-  }
-
-  .social-icons {
-    margin-top: 10px;
-  }
-
-  .social-link {
-    margin: 0 8px;
-    text-decoration: none;
-    color: var(--color-300);
-    font-size: 1.5em;
-    transition: color 0.3s ease;
-  }
-
-  .social-link:hover {
-    color: var(--color-50);
-  }
-
-  .logo-img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 5px;
-  }
-
-  .footer-divider {
-    border: 0;
-    border-top: 1px solid var(--color-700);
-    margin: 30px 0;
-  }
-
-  .footer-copyright {
-    font-size: 0.9em;
-    color: var(--color-100);
-  }
-
-  @media (max-width: 1024px) {
-    .footer-flex {
-      flex-direction: column;
-      align-items: center;
-      gap: 20px;
-    }
-    .footer-contact,
-    .footer-social,
-    .footer-logo {
-      flex: 1 1 100%;
-      max-width: 100%;
-      text-align: center;
-    }
-  }
-
-  @media (max-width: 768px) {
-    .footer-flex {
-      flex-direction: column;
-      text-align: center;
-      gap: 15px;
-    }
-    .footer-contact,
-    .footer-social,
-    .footer-logo {
-      flex: 1 1 100%;
-      max-width: 100%;
-      margin-bottom: 15px;
-    }
-    .footer-container {
-      padding: 0 10px;
-    }
-  }
+  
+}
