--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -21,14 +21,13 @@
         <!-- Logo de la compañía -->
         <div class="footer-logo">
           <p class="footer-title">Internet Ilimitado - Teslanet</p>
-          <!-- <img src="path/to/logo.png" alt="Teslanet" class="logo-img"> -->
-           <h2>TESLANET</h2>
+          <img src="assets/svg/footer.svg" alt="Teslanet" class="logo-img">
         </div>
+
       </div>
       <hr class="footer-divider">
       <p class="footer-copyright">&copy; 2024 Teslanet - Todos los derechos reservados.</p>
     </div>
   </footer>
-  
   <!-- Agregar iconos de redes sociales (se requiere Font Awesome) -->
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
