--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="logo">
             <a routerLink="/home" fragment="home">
-                <span>TESLANET</span>
+                <img class="img-logo" src="assets/svg/logo.svg" alt="">
             </a>
         </div>
         <!-- Botón de menú (hamburger) -->
