--- a/src/app/components/beneficios/beneficios.component.html
+++ b/src/app/components/beneficios/beneficios.component.html
@@ -1,4 +1,4 @@
-<section  id="veneficios">
+<section  id="beneficios">
     <div class="container-service">
       <div class="servicio">
         <div class="description">
