--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -12,9 +12,9 @@
             <button class="close-button" (click)="closeMenu()">&#10005;</button>
             <ul>
                 <li><a routerLink="/home" fragment="home" (click)="closeMenu()"> <span>Inicio</span> <i class="fa-solid fa-arrow-right"></i></a></li>
-                <li><a routerLink="" (click)="closeMenu()"> <span>Planes</span> <i class="fa-solid fa-arrow-right"></i></a></li>
-                <li><a routerLink="" (click)="closeMenu()"> <span>Beneficios</span> <i class="fa-solid fa-arrow-right"></i></a></li>
-                <li><a routerLink="" (click)="closeMenu()"> <span>Cobertura</span> <i class="fa-solid fa-arrow-right"></i></a></li>
+                <li><a routerLink="/planes" fragment="planes" (click)="closeMenu()"> <span>Planes</span> <i class="fa-solid fa-arrow-right"></i></a></li>
+                <li><a routerLink="/beneficios" fragment="beneficios" (click)="closeMenu()"> <span>Beneficios</span> <i class="fa-solid fa-arrow-right"></i></a></li>
+                <li><a routerLink="cobertura" fragment="cobertura" (click)="closeMenu()"> <span>Cobertura</span> <i class="fa-solid fa-arrow-right"></i></a></li>
             </ul>
             <div class="accion">
                 <a href="">Contáctanos</a>
@@ -23,9 +23,9 @@
         <div class="menu-2">
             <ul>
                 <li><a routerLink="/home" fragment="home">Inicio</a></li>
-                <li><a routerLink="">Planes</a></li>
-                <li><a routerLink="">Beneficios</a></li>
-                <li><a routerLink="">Cobertura</a></li>
+                <li><a routerLink="/planes" fragment="planes">Planes</a></li>
+                <li><a routerLink="/beneficios" fragment="beneficios">Beneficios</a></li>
+                <li><a routerLink="cobertura" fragment="cobertura">Cobertura</a></li>
             </ul>
         </div>
         <!-- Overlay que cubre toda la pantalla -->
