--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -2,8 +2,8 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  background: var(--color-800);
-  color: var(--color-white);
+  background: var(--color-50);
+  color: var(--color-950);
 }
 
 .footer-container{
@@ -26,7 +26,7 @@
 }
 
 .footer-container .footer-flex .footer-contact a{
-  color: var(--color-white);
+  color: var(--color-950);
   text-decoration: none;
 }
 
@@ -43,7 +43,7 @@
 }
 
 .footer-container .footer-flex .footer-social .social-icons a i{
-  color: var(--color-white);
+  color: var(--color-950);
   font-size: 2rem;
 }
 
