--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
 <app-planes></app-planes>
 <app-beneficios></app-beneficios>
 <app-covertura></app-covertura>
+<app-frecuentes></app-frecuentes>
 <app-footer></app-footer>
