--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,7 +9,7 @@
               <div class="texto">
                 <h2>{{ imagen.tittle }}</h2>
                 <span>{{ imagen.mensaje }}</span>
-                <a href="">Lo quiero</a>
+                <a [href]="urlWatssapp+textWatsapp" target="_blank">Lo quiero</a>
               </div>
             </div>
           </div>
