--- a/src/app/components/planes/planes.component.html
+++ b/src/app/components/planes/planes.component.html
@@ -33,7 +33,7 @@
                     </div>
                 </div>
                 <div class="accion">
-                    <a href="">!Quiero este plan!</a>
+                    <a [href]="generarUrlWhatsApp(imagen.plan, imagen.precio)" target="_blank" rel="noopener noreferrer">¡Quiero este plan!</a>
                 </div>
                 <div class="icons-servicio">
                     <div class="icon">
